--- a/touch_writer/touch_writer.css
+++ b/touch_writer/touch_writer.css
@@ -665,6 +665,7 @@ span.rotated{
 
 #btn_R{
     border:1px solid red;
+    border-radius: 30px 0 0 30px;
 }
 
 #btn_G{
@@ -673,6 +674,7 @@ span.rotated{
 
 #btn_B{
     border: 1px solid rgb(0,0,255);
+    border-radius: 0 30px 30px 0;
 }
 
 #found_list{
