--- a/css/cle.css
+++ b/css/cle.css
@@ -21,7 +21,7 @@ html,body
 }
 
 a{
-  color: rgb(50,150,50);
+  color: cornflowerblue;
 }
 
 p.disclaimer{
@@ -71,7 +71,7 @@ p.pre {
 
 .choice{
   width:90%;
-  background: rgb(50,150,50);
+  background: cornflowerblue;
   text-align:center;
   margin-bottom:20px;
   box-sizing: border-box;
@@ -189,7 +189,7 @@ hr {
   width:100%;
   height:100%;
   font-size:0.8em;
-  background: radial-gradient(circle at top left, black, rgb(50,150,50));
+  background: radial-gradient(circle at top left, black, cornflowerblue);
   color:white;
   transition: all 0.3s ease;
   text-align:center;
