--- a/graphieros_journal/graphieros_journal.css
+++ b/graphieros_journal/graphieros_journal.css
@@ -1,13 +1,23 @@
-body{
+ody{
+
     background: rgb(24, 24, 24);
+
 }
 
+ 
+
 :root{
+
     --green: rgb(78, 122, 52);
+
     --FT: 'Poiret One', cursive;
+
 } 
 
+ 
+
 header{ 
+
     display: grid;
     align-items:center;
     justify-items:center;
@@ -28,38 +38,72 @@ header{
     font-weight:bold;
     padding-bottom: 50px;
     z-index:100;
+
 }
+
+ 
 
 span.a{
+
     color: var(--green);
+
 }
+
+ 
 
 span.b{
+
     color: cornflowerblue;
+
 }
+
+ 
 
 span.c{
+
     color: tomato;
+
 }
 
+ 
+
 span.d{
+
     color: gold;
+
 }
+
+ 
 
 span.a,
+
 span.b,
+
 span.c,
+
 span.d{
+
     font-weight:bold;
+
 } 
 
 #main{
-    display: block;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    justify-items:center;
+    height:100vh;
+    max-height:800px;
     margin: 0 auto;
-    margin-top:100px;
+    margin-top: 100px;
     width:400px;
 }
 
 .graphieros_text{
     color: transparent;
+    box-sizing: border-box;
+}
+
+.p{
+    box-sizing: border-box;
+    display:block;
 }
