--- a/graphieros_journal/graphieros_journal.css
+++ b/graphieros_journal/graphieros_journal.css
@@ -1,17 +1,21 @@
-ody{
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 
-    background: rgb(24, 24, 24);
-
+html {
+    background: radial-gradient(at top,white,rgb(215, 231, 238));
 }
 
  
 
 :root{
-
     --green: rgb(78, 122, 52);
-
     --FT: 'Poiret One', cursive;
-
 } 
 
  
@@ -87,15 +91,46 @@ span.d{
 
 } 
 
-#main{
+.svg_title{
+    width:50%;
+    max-width:400px;
+    margin: 0 auto;
+    margin-bottom:20px;
+    margin-top:100px;
+    background: white;
+    border-radius:100%;
+}
+
+.svg_title > svg {
+    
+    display: grid;
+    align-items:center;
+    justify-items:center;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    background: transparent;
+    fill:none; 
+}
+
+.global_wrapper{
+    width:100%;
+    display: grid;
+    align-items:center;
+    justify-items:center;
+}
+
+/*all that is below needs to be included in graphieros.js*/
+
+.main{
     display: grid;
     grid-template-columns: repeat(10,1fr);
     justify-items:center;
-    height:100vh;
-    max-height:800px;
-    margin: 0 auto;
-    margin-top: 100px;
+    margin:0 auto;
+    box-sizing: border-box;
     width:400px;
+    border-bottom: 1px solid rgb(148, 201, 226);
+    padding-top:20px;
+    padding-bottom:20px;
 }
 
 .graphieros_text{
@@ -103,7 +138,27 @@ span.d{
     box-sizing: border-box;
 }
 
-.p{
+.p,
+.p0{
     box-sizing: border-box;
     display:block;
+}
+
+.link,
+.word{
+    opacity:0;
+    transition: opacity 1s ease;
+}
+
+@media screen and (max-width: 500px) {
+
+    .main{
+        grid-template-columns: repeat(10,35px);
+        width:350px;
+    }
+
+    .svg_title{
+        width:90%;
+    }
+
 }
