--- a/css/index.css
+++ b/css/index.css
@@ -206,8 +206,18 @@ span.nD{
     top:50%;
     right:131px;
     transform: translateY(-300%);
-    background: rgb(163, 224, 211);
+    background: white;
     font-size:0.75em;
+}
+
+#menuBallContact > :first-child {
+    height:100%;
+    width:100%;
+    display: grid;
+    align-items:center;
+    justify-items:center;
+    border-radius:100%;
+    border:1px solid rgb(101,143,141);
 }
 
 .svgCle{
@@ -473,7 +483,6 @@ span#EE{
     border-radius:100%;
     height: 100px;
     width:100px;
-    line-height:50px;
     margin:0 auto;
     border:1px solid greenyellow;
     cursor: pointer;
@@ -486,6 +495,7 @@ span#EE{
 
 img#BIOPIC{
     border-radius: 30px 30px 30px 100px;
+    margin-bottom: 100px;
 }
 
 #BIOPICmenu > div {
