--- a/css/cle.css
+++ b/css/cle.css
@@ -1,6 +1,14 @@
 html{
   background:  rgb(240, 237, 226);
 }
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x:hidden;
+}
 
 :root{
   --green: rgb(78, 122, 52);
@@ -13,6 +21,7 @@ a{
 
 header{ 
   display: grid;
+  position:sticky;
   grid-template-columns: repeat(10,1fr);
   align-items:center;
   justify-items:center;
@@ -118,6 +127,12 @@ span.fig{
   margin-top:-10px;
 }
 
+span.center {
+  display: inline-block;
+  width:100%;
+  text-align:center;
+}
+
 .book_text {
   margin: 0 auto;
   box-sizing: border-box;
@@ -154,6 +169,40 @@ img {
   align-items:center;
   justify-items:center;
   grid-template-columns: repeat(3,1fr);
+}
+
+img {
+  margin-left: 50%;
+  transform: translate(-50%);
+}
+
+#pic0{
+  width:100px;
+}
+
+#pic1{
+  width:200px;
+}
+
+#pic2,#pic3{
+  width:300px;
+}
+
+.numberz {
+  width:100%;
+  display: grid;
+  align-items:center;
+  justify-items:center;
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.numbers > div {
+  width:100%;
+  text-align:center;
+}
+
+.digits{
+  padding-top:20px;
 }
 
 @media screen and (max-width: 600px) {
