--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body {
 
 :root {
     --FT: 'Poiret One', cursive;
-}  
+}
 
 footer{
     position:absolute;
@@ -206,19 +206,18 @@ span.nD{
     top:50%;
     right:131px;
     transform: translateY(-300%);
-    background: white;
+    background: rgb(218, 241, 234);
     font-size:0.75em;
 }
 
-#menuBallContact > :first-child {
-    height:100%;
+/* #menuBallContact > :first-child {
     width:100%;
     display: grid;
     align-items:center;
     justify-items:center;
     border-radius:100%;
     border:1px solid rgb(101,143,141);
-}
+} */
 
 .svgCle{
     width:100%;
@@ -482,7 +481,7 @@ span#EE{
     justify-items:center;
     border-radius:100%;
     height: 100px;
-    width:100px;
+    width:100px !important;
     margin:0 auto;
     border:1px solid greenyellow;
     cursor: pointer;
@@ -496,6 +495,15 @@ span#EE{
 img#BIOPIC{
     border-radius: 30px 30px 30px 100px;
     margin-bottom: 100px;
+}
+
+#ctcWrap{
+    opacity:0.45;
+    transition: opacity 0.3s ease;
+}
+
+#ctcWrap:hover {
+    opacity: 1;
 }
 
 #BIOPICmenu > div {
@@ -743,10 +751,7 @@ p#cleGreen{
     width: 100%;
     margin: 0 auto;
     max-width:400px;
-    display: grid;
-    grid-template-columns: repeat(10,1fr);
     box-sizing: border-box;
-    padding:20px;
 }
 
 /*GALERIE*/
